Wed Apr 14 03:45:39 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtktreeview.c (gtk_tree_view_expose): propagate expose
	events to children.

Wed Apr 14 03:32:58 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkpathbar.c (make_directory_button): remove spurious
	gtk_box_pack_start.

Tue Apr 13 16:19:23 2004  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkpathbar.c (make_directory_button): patch from Owen to
	make the buttons sized by a bold label.  This makes the text
	'swim' a little, but stops the buttons from resizing, #137210

2004-04-13  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkuimanager.c (get_child_node): Don't crash if a node 
	has no name.
	(start_element_handler): Accept separators without unique 
	names.  (#133302, Anders Carlsson)

	* gtk/gtkactiongroup.c (gtk_action_group_add_action): Document
	possible accelerator gotcha when using this function.  (#139641, 
	Christian Persch)

	* gtk/gtkuimanager.c (node_remove_ui_reference): Don't leak
	list nodes.  (#138862, Morten Welinder)

Tue Apr 13 12:24:49 2004  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_destroy): remove unused
	variable.
	(gtk_tree_view_button_press): If we activated the row we don't
	want to grab focus back, as moving focus to another widget is
	pretty common, #138458

2004-04-12  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilechooser.c (gtk_file_chooser_class_init): Added
	documentation to all the signals.

2004-04-12  Matthias Clasen  <mclasen@dhcp64-228.boston.redhat.com>

	* gtk/gtkcombobox.c (gtk_combo_box_unset_model): Don't unref
	model if it is NULL. (#139770)

	* gtk/gtktreeview.c (gtk_tree_view_get_cell_area): Typo fix.

	* gtk/gtkentrycompletion.c (gtk_entry_completion_init): Don't add
	a shadow inside the scrolled window, add it around the vbox.

	* gtk/gtkentryprivate.h: 
	* gtk/gtkentrycompletion.c (_gtk_entry_completion_resize_popup): 
	Return a boolean indicating whether the popup is positioned above 